--- a/.github/workflows/stable_version_regex.yml
+++ b/.github/workflows/stable_version_regex.yml
@@ -12,4 +12,4 @@ jobs:
     steps:
     - name: Stable version
       run: echo This tag is be stable version!
-      if: endsWith(github.ref, 'refs/tags/v[0-9]+\.[0-9+]\.?[0-9]*')
+      if: endsWith(github.ref, 'refs/tags/v[0-9]+\.[0-9]+\.?[0-9]*')
