--- a/.github/workflows/stable_version_regex.yml
+++ b/.github/workflows/stable_version_regex.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Check stable
       id: check_stable
       run: |
-        if [[ ${{ github.event.ref }} =~ ^refs/tags/v[0-9]+(\.[0-9]+)+$ ]]; then
+        if [[ ${{ github.ref }} =~ ^refs/tags/v[0-9]+(\.[0-9]+)+$ ]]; then
           echo ::set-output name=is_stable::true
         fi
 
